[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Pokedex/PokedexInterface.gd" type="Script" id=1]
[ext_resource path="res://Resources/PokedexInterface.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/pokedex_background.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Pokedex/Container.gd" type="Script" id=4]
[ext_resource path="res://Sprites/reply-message.png" type="Texture" id=5]
[ext_resource path="res://Sprites/bottom.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "HideSearchBar"
tracks/0/type = "value"
tracks/0/path = NodePath("SearchBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 7 ), Vector2( 9, -25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("SearchBar:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -25 ), Vector2( 9, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="PokedexInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_left = 155.0
margin_top = 6.81102
margin_right = 175.0
margin_bottom = 26.811
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 10, 10 )
focus_mode = 0
mouse_filter = 1
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -26.0
mouse_filter = 1
theme = ExtResource( 2 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 154.0
rect_min_size = Vector2( 154, 0 )
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Container"]
margin_left = 2.5
margin_top = 2.5
margin_right = 22.5
margin_bottom = 22.5
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonImage" type="TextureRect" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -128.0
margin_right = 48.0
margin_bottom = -32.0
rect_min_size = Vector2( 96, 96 )
mouse_filter = 2
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InitialInfoContainer" type="HBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -38.0
margin_right = 20.0
margin_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonId" type="Label" parent="Container/InitialInfoContainer"]
margin_left = 18.0
margin_right = 18.0
margin_bottom = 12.0
theme = ExtResource( 2 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonName" type="Label" parent="Container/InitialInfoContainer"]
margin_left = 22.0
margin_right = 22.0
margin_bottom = 12.0
theme = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilitiesContainer" type="HBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -20.0
margin_right = -34.0
margin_bottom = 8.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="Label" parent="Container/AbilitiesContainer"]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Abilities:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability1" type="Label" parent="Container/AbilitiesContainer"]
margin_left = 44.0
margin_top = 8.0
margin_right = 44.0
margin_bottom = 20.0
theme = ExtResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability2" type="Label" parent="Container/AbilitiesContainer"]
margin_left = 48.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
theme = ExtResource( 2 )
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightContainer" type="HBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = 26.0
margin_right = -48.0
margin_bottom = 38.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="Label" parent="Container/HeightContainer"]
margin_right = 30.0
margin_bottom = 12.0
theme = ExtResource( 2 )
text = "Height:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonHeight" type="Label" parent="Container/HeightContainer"]
margin_left = 34.0
margin_right = 34.0
margin_bottom = 12.0
theme = ExtResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightContainer" type="HBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2.62543
margin_top = 26.0
margin_right = 37.6254
margin_bottom = 38.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weight" type="Label" parent="Container/WeightContainer"]
margin_right = 31.0
margin_bottom = 12.0
theme = ExtResource( 2 )
text = "Weight:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonWeight" type="Label" parent="Container/WeightContainer"]
margin_left = 35.0
margin_right = 35.0
margin_bottom = 12.0
theme = ExtResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBar" type="TextEdit" parent="."]
margin_left = 9.0
margin_top = -25.0
margin_right = 151.0
margin_bottom = -6.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/HideSearchBar = SubResource( 1 )
anims/ShowSearchBar = SubResource( 2 )

[connection signal="send_request_pokemon" from="." to="Container" method="_send_request_pokemon"]
[connection signal="pressed" from="Button" to="." method="_on_SearchBar_Button_pressed"]
[connection signal="pressed" from="Container/BackButton" to="." method="_on_BackButton_pressed"]
